[project]
name = "bondlab"
version = "0.0.1"
description = "債券クオンツ・チュートリアルで育てる自作プライシングライブラリ"
requires-python = ">=3.11"
# 動作確認済みバージョンを下限、次のメジャーを上限に固定する。
# QuantLib は機械精度の突合基準なので下限を明示（1.42 で全テスト緑）。
# 厳密に再現したい場合は requirements-lock.txt を使う。
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "QuantLib>=1.42,<2",
    "statsmodels>=0.14,<1",
    "cvxpy>=1.5,<2",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov", "jupytext>=1.16,<2", "nbclient>=0.9,<1",
       "nbstripout", "ruff", "mypy"]
app = ["fastapi>=0.110,<1", "uvicorn>=0.29,<1", "streamlit>=1.33,<2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
